# UMF-DevKit

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  render.yaml  vercel.json
LaraVue/: .editorconfig  .env.example  .gitignore  README.md
LaraVue/backend/: README.md
LaraVue/backend/cpp/: CMakeLists.txt  main.cpp
LaraVue/backend/csharp-aspnet/: Program.cs
LaraVue/backend/dafny/: VisitorAnalytics.dfy
LaraVue/backend/fstar/: VisitorAnalytics.fst
LaraVue/backend/java-processing/: AnalyticsSketch.pde  README.md
LaraVue/backend/mojo/: README.md  main.mojo
LaraVue/backend/python-fastapi/: main.py
LaraVue/backend/rust-actix-web/: Cargo.toml  main.rs
LaraVue/backend/shared/: visitor-event-schema.md
LaraVue/backend/zig/: build.zig  main.zig
LaraVue/frontend/laravel-vue-hx/: README.md  package.json  tailwind.config.js
backend/actix/: Cargo.toml  Dockerfile
backend/actix/src/: main.rs
backend/aspnet/: Dockerfile  Program.cs  aspnet.csproj
backend/drogon/: CMakeLists.txt  Dockerfile  main.cc
backend/fastapi/: Dockerfile  main.py  requirements.txt
backend/jetzig/: Dockerfile  build.zig
backend/laravel/: Dockerfile  README.md
backend/lightbug/: Dockerfile  main.mojo
backend/zylix/: Dockerfile  build.zig
docs/diagrams/: algorithm.md  architecture.md  flowchart.md  sequence.md
frontend/htmx/: index.html
frontend/tailwind/: tailwind.config.js
frontend/vue/: index.html  package.json  vite.config.js
frontend/vue/src/: App.vue
infra/postgres/: init.sql
verification/dafny/: example.dfy
verification/fstar/: example.fst
(+10 files in other folders)
